--- a/episode_4.html
+++ b/episode_4.html
@@ -33,37 +33,15 @@
         </ul>
     </section>
 
-    <app-button>
+    <app-button type="primary">
         Submit
     </app-button>
 </div>
 
 <script type="module">
-    import AppButton from "./js/components/AppButton.js";
+    import App from "./js/components/App.js";
 
-    let app = {
-        data() {
-            return {
-                assignments: [
-                    {name: 'Finish project', completed: false, id: 1},
-                    {name: 'Read chapter 4', completed: false, id: 2},
-                    {name: 'Turn in homework', completed: false, id: 3},
-                ]
-            }
-        },
-        computed: {
-            inProgressAssignmets() {
-                return this.assignments.filter(a => !a.completed);
-            },
-            completedAssignmets() {
-                return this.assignments.filter(a => a.completed);
-            }
-        },
-        components: {
-            'app-button': AppButton
-        }
-    }
-    Vue.createApp(app).mount('#app');
+    Vue.createApp(App).mount('#app');
 </script>
 </body>
 </html>
